major refactoring #2